--- a/DrawPath/load.html
+++ b/DrawPath/load.html
@@ -7,23 +7,9 @@
     <script src="http://code.jquery.com/ui/1.10.4/jquery-ui.js"></script>
     <link type="stylesheet" href="//code.jquery.com/ui/1.10.4/themes/smoothness/jquery-ui.css">
     <script>
-      timerBreak = 0;
+
       $(function() {
-        $("#demo").click(function(){
-          alert('hoge');
-        });
-
-        $("#stop").click(function(){
-          if(timer){
-            clearTimeout(timer);
-            timerBreak = 1;
-          }
-        });
-        $.get("kono.rml",function(data){
-          //console.log(data);
-          drawPath(data);
-        });
-
+        timerBreak = 0;
         var canvas = $("#canvas")[0];
         var ctx = canvas.getContext( "2d" );
         var px = 0;
@@ -32,6 +18,19 @@
         var cy = 0;
         var line = 0;
         var timer = 0;
+        var curfile = 0;
+        var load_rml_timers;
+        $("#demo").click(function(){
+          alert('hoge');
+        });
+        $("#pause").click(function(){
+            $.each(load_rml_timers, function(i, timer) {
+               if (timer) {
+                 clearTimeout(timer);
+                }
+            });
+        });
+        $("#resume").click(runDemo);
         function Func(value){
           var split = value.replace(';','').replace('PD','').split(',');
           cx = split[0]; 
@@ -49,18 +48,25 @@
           ctx.stroke();
           $("#printline").text("Line: "+line);
         }
+        function runDemo(){
+            $.get("kono.rml",function(data){
+              drawPath(data);
+            });
+        }
         function drawPath(rml){
           var coord = rml.match(/PD.*?;/g);
-          $.each(coord, function(index, value) {
-            timer = setTimeout(function(){
-              Func(value);
-              // console.log(timer);
-              // if(timerBreak==1){
-              //   clearTimeout(timer);
-              // }
-            },10+index*10);
+          load_rml_timers = coord.map(function(v, i) {
+              if (i < curfile) {
+                  return null;
+              } else {
+                  return setTimeout(function() {
+                      Func(v);
+                  }, 10+i*10);
+              }
           });
         }
+        runDemo();
+
       });
 
     </script>
@@ -70,7 +76,8 @@
 
     <div id="read_text">load RML</div>        
     <button id="demo">run demo</button>
-    <button id="stop">stop</button>
+    <button id="pause">pause</button>
+    <button id="resume">resume</button>
     <div id="printline">hey</div>
 
 
