Change dir structure

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         var curfile = 0;
         var load_rml_timers;
         $("#demo").click(function(){
-          alert('hoge');
+            runDemo();
         });
         $("#pause").click(function(){
             $.each(load_rml_timers, function(i, timer) {
