add copyright and link

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 </head>
 <body>
   <h1>RML Analyzer</h1>
-
+  <p>(c)Shohei Aoki, 2016. See also: <a href="http://shoheiaoki.com/rmlgen">RML generator</a></p>
   <div id="read_text">load RML</div>        
   <input type="file" id="load_file" name="files[]" multiple />
   <br />
